--- a/math/notes/prd-logic/prd-logic.tex
+++ b/math/notes/prd-logic/prd-logic.tex
@@ -22,9 +22,8 @@
 \setvariables [document] [fontsize=12pt]
 
 % Document specific information
-\setvariables [document] [title={Mathematical Logic}]
+\setvariables [document] [title={Logic}]
 \setvariables [document] [subtitle={Notes and Exercises}]
-\setvariables [document] [course={PHIL 4010}]
 \setvariables [document] [author={Sudip Sinha}]
 \setvariables [document] [date={\date}]
 \setvariables [document] [keyword={logic, mathematics, set theory, category theory, exercises, solutions, notes}]
@@ -48,8 +47,8 @@
 
 \startbodymatter
 
-	% \startpart[title={PHIL 4010 Exercises}, reference=prt:exercises]
-		\component  cmp-exercises
+	% \startpart[title={Herbert Enderton --- Mathematical Logic}, reference=prt:logic-Enderton]
+		\component  cmp-logic-Enderton
 	% \stoppart
 
 	% \startpart[title={modules}, reference=prt:modules]
