--- a/math/notes/prd-research/cmp-anticipating-integrals.tex
+++ b/math/notes/prd-research/cmp-anticipating-integrals.tex
@@ -3,10 +3,24 @@
 \product  prd-research
 
 
-\startchapter[title={Elementary ideas}]
+\startchapter [title={Interpretation of exponential processes}]
 
-ABCD
+	In classical Itô theory, there are three equivalent interpretations of exponential processes.
+	\startitemize [i, joinedup]
+		\item  renormalization
+		\item  martingale
+		\item  SDEs
+	\stopitemize
 
+	This is not so in the two-sided stochastic integral theory.
+
+\stopchapter
+
+\startchapter [title={Miscellaneous}]
+	
+	\startexample
+		The process \m{X} given by \m{X_t = B_{\frac12 (t + T)} - B_t)} cannot be expressed as a Borel function of \m{B_T - B_⋅}.
+	\stopexample
 \stopchapter
 
 \stopcomponent
