--- a/math/bibliographies/Kuo-integral.bib
+++ b/math/bibliographies/Kuo-integral.bib
@@ -2,6 +2,29 @@
 % Papers %
 %%%%%%%%%%
 
+
+@article{HwangKuoSaitô2019,
+	author = {Hwang, Chii Ruey and Kuo, Hui-Hsiung and and Saitô, Kimiaki},
+	title = {Anticipating Exponential Processes and Stochastic Differential Equations},
+	year = 2019,
+	journal = {Communications on Stochastic Analysis},
+	volume = 13,
+	number = 3,
+	article = 9,
+	doi = {10.31390/cosa.13.3.09},
+	url = {https://digitalcommons.lsu.edu/cosa/vol13/iss3/9}}
+
+@article{KuoSinhaZhai2018,
+	author = {Kuo, Hui-Hsiung and Sinha, Sudip and Zhai, Jiayu},
+	title = {Stochastic Differential Equations with Anticipating Initial Conditions},
+	year = 2018,
+	journal = {Communications on Stochastic Analysis},
+	volume = 12,
+	number = 4,
+	article = 6,
+	doi = {10.31390/cosa.12.4.06},
+	url = {https://digitalcommons.lsu.edu/cosa/vol12/iss4/6}}
+
 @article{HibinoKuoSaitô2018,
 	author = {Hibino, Shinya and Kuo, Hui-Hsiung and Saitô, Kimiaki},
 	title = {A Stochastic Integral by a Near-Martingale},
