--- a/math/talks/env-talks.tex
+++ b/math/talks/env-talks.tex
@@ -136,6 +136,8 @@
 \definemathcommand [ess] [limop] {\mfunction{ess}}
 \definemathcommand [limsupm] [limop] {\overline{\lim}}
 \definemathcommand [liminfm] [limop] {\underline{\lim}}
+\definemathcommand [ℙlim] [limop] {ℙ\lim}
+\definemathcommand [Ltwolim] [limop] {L^2\lim}
 
 % Algebra
 \definemathcommand [ker] [nolop] {\mfunction{ker}}
@@ -150,6 +152,7 @@
 % Probability
 \definemathcommand [infinitelyoften] [nolop] {\,\mfunction{i.o.}}
 \definemathcommand [eventually] [nolop] {\,\mfunction{ev}}
+
 
 % Matrices
 \definemathmatrix
