--- a/teaching/env-tests.tex
+++ b/teaching/env-tests.tex
@@ -31,6 +31,29 @@
 \setupheadertexts[\directsetup{headertext}]
 
 
+% \define[2]\test{
+% 	\framed [
+% 		frame=on,
+% 		corner=03,
+% 		width=\hsize,
+% 		frameoffset=4pt,
+% 		framecolor=\getvariable{document}{color-headings},
+% 		align=middle]
+% 	% {#1\\#2}}
+% 	{\vbox{\headtext{MATH 1550} #1\blank#2}}}
+
+% \setuphead [chapter] [
+% 	command=\test,
+% 	color=\getvariable{document}{color-headings},
+% 	alternative=margin,
+% 	style=\tfc\smallcaps]
+
+% \definehead [test] [chapter] [
+% 	before=\hairline\blank,
+% 	after=\nowhitespace\hairline]
+
+
+
 %% Mathematics
 
 % I have not completely figured out a way to create a dot between \cdot and \bullet
