--- a/teaching/MATH1550/prd-MATH1550.tex
+++ b/teaching/MATH1550/prd-MATH1550.tex
@@ -19,8 +19,9 @@
 
 
 \startbodymatter
-	% \component quiz-20200124
-	\component quiz-20200131
+	% \component quiz2-20200124
+	% \component quiz3-20200131
+	\component test1-20200204
 
 \stopbodymatter
 
